# Real-Estate-News-Crawler

./: Dockerfile  README.md  VNExpress.ipynb  docker-compose.yaml  output.json  pyproject.toml  scheduler.db  vnexpress.py
.github/workflows/: main.yaml
app/: main.py
app/api/routes/: scheduler.py
app/crud/: scheduler_crud.py
app/models/: scheduler.py
app/schemas/: scheduler.py
app/services/: schedule_service.py
app/statics/js/: main.js
app/templates/: base.html
app/templates/scheduler/: create.html  detail.html  index.html
app/utils/: constants.py  exceptions.py  service_results.py
data/vnexpress/: vnexpress_bds.json
