[project]
name = "real-estate-news-crawler"
version = "0.1.0"
description = "This is the crawler tool for vietnamese real estate news"
authors = [
    {name = "KawaiButa",email = "21522441@gm.uit.edu.vn"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "selenium (>=4.29.0,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
